--- a/app/src/main/res/layout/fragment_create_event.xml
+++ b/app/src/main/res/layout/fragment_create_event.xml
@@ -1,124 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include
-        android:id="@+id/add_event_toolbar_view"
-        layout="@layout/create_event_toolbar_layout" />
-
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/toolbar_wrapper"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:text="@string/need"
-        android:textColor="?attr/textColor"
-        android:textSize="25sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/add_event_toolbar_view" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <EditText
-        android:id="@+id/edit_title"
-        style="@style/todoTextColor"
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/toolbar_main"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?attr/settings_text_color"
+            app:menu="@menu/top_app_bar"
+            app:navigationIconTint="?attr/toolbarColor"
+            app:subtitleTextColor="?attr/toolbarColor"
+            app:title="@string/add_event"
+            app:titleTextColor="?attr/toolbarColor" />
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/editText_wrapper"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="10dp"
-        android:background="@drawable/create_event_edittext_background"
-        android:hint="@string/walk_dog"
-        android:inputType="textCapSentences"
-        android:maxLength="35"
-        android:padding="12dp"
-        android:textColor="?attr/textColor"
-        android:textColorHint="@color/hint_color"
-        android:textSize="18sp"
+        android:layout_margin="16dp"
+        android:layout_marginBottom="20dp"
+        android:hint="@string/add_some_event"
+        android:padding="16dp"
+        android:textColorHint="?attr/hint_color"
+        app:boxBackgroundColor="?attr/windowColor"
+        app:boxCornerRadiusBottomEnd="6dp"
+        app:boxCornerRadiusBottomStart="6dp"
+        app:boxCornerRadiusTopEnd="6dp"
+        app:boxCornerRadiusTopStart="6dp"
+        app:boxStrokeColor="?attr/textColor"
+        app:boxStrokeWidth="2dp"
+        app:hintTextColor="?attr/toolbarColor"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@id/title"
-        app:layout_constraintTop_toBottomOf="@id/title"
-        tools:ignore="Autofill" />
-
-    <Button
-        android:id="@+id/start_date_button"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:background="@drawable/blue_button_background"
-        android:foreground="?attr/selectableItemBackground"
-        android:text="@string/begin"
-        android:textColor="@color/settings_text_color"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@id/edit_title"
-        app:layout_constraintTop_toBottomOf="@id/edit_title"
-        tools:ignore="UnusedAttribute" />
-
-    <TextView
-        android:id="@+id/start_date_number"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="@string/date"
-        android:textColor="?attr/textColor"
-        android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="@id/start_date_button"
-        app:layout_constraintStart_toStartOf="@id/start_date_button"
-        app:layout_constraintTop_toBottomOf="@id/start_date_button" />
-
-    <Button
-        android:id="@+id/start_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="70dp"
-        android:background="@drawable/blue_button_background"
-        android:foreground="?attr/selectableItemBackground"
-        android:text="@string/begin_time"
-        android:textColor="@color/settings_text_color"
-        android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/start_date_number"
-        tools:ignore="UnusedAttribute" />
+        app:layout_constraintTop_toBottomOf="@id/toolbar_wrapper">
 
-    <TextView
-        android:id="@+id/start_time_number"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="@string/time"
-        android:textColor="?attr/textColor"
-        android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="@id/start_time"
-        app:layout_constraintStart_toStartOf="@id/start_time"
-        app:layout_constraintTop_toBottomOf="@id/start_time" />
-
-    <Button
-        android:id="@+id/end_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
-        android:layout_marginEnd="10dp"
-        android:background="@drawable/blue_button_background"
-        android:foreground="?attr/selectableItemBackground"
-        android:text="@string/end_time"
-        android:textColor="@color/settings_text_color"
-        android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/start_date_number"
-        tools:ignore="UnusedAttribute" />
-
-    <TextView
-        android:id="@+id/end_time_number"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="@string/time"
-        android:textColor="?attr/textColor"
-        android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="@id/end_time"
-        app:layout_constraintStart_toStartOf="@id/end_time"
-        app:layout_constraintTop_toBottomOf="@id/end_time" />
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/editText_create_idea"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textMultiLine|textCapSentences"
+            android:maxLines="20"
+            android:textColor="?attr/textColor"
+            android:textColorHint="?attr/toolbarColor"
+            android:textCursorDrawable="@drawable/cursor_color"
+            android:textStyle="bold" />
+    </com.google.android.material.textfield.TextInputLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
