--- a/app/src/main/res/layout/fragment_create_tasks.xml
+++ b/app/src/main/res/layout/fragment_create_tasks.xml
@@ -6,33 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".ui.tasks.CreateTasksFragment">
 
-    <Toolbar
-        android:id="@+id/cr_category_toolbar"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/toolbar_wrapper"
         android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:background="?attr/windowColor"
-        android:orientation="vertical"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent">
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?attr/settings_text_color"
+            app:navigationIconTint="?attr/toolbarColor"
+            app:subtitleTextColor="?attr/toolbarColor"
+            app:title="@string/tasks"
+            app:titleTextColor="?attr/toolbarColor" />
 
-                <TextView
-                    android:id="@+id/toolbar_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:layout_gravity="center_vertical"
-                    android:fontFamily="@font/m_light"
-                    android:text="@string/personal"
-                    android:textColor="?attr/textColor"
-                    android:textSize="23dp"
-                    android:textStyle="bold" />
+    </com.google.android.material.appbar.AppBarLayout>
 
-            </RelativeLayout>
-    </Toolbar>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/cr_recycler"
@@ -43,7 +34,7 @@
         app:layout_constraintBottom_toTopOf="@+id/cr_editText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cr_category_toolbar" />
+        app:layout_constraintTop_toBottomOf="@id/toolbar_wrapper" />
 
     <EditText
         android:id="@+id/cr_editText"
