--- a/app/src/main/res/layout/item_idea.xml
+++ b/app/src/main/res/layout/item_idea.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:padding="16dp"
+    app:cardCornerRadius="14dp"
+    android:foreground="?attr/selectableItemBackground"
+    tools:ignore="UnusedAttribute"
+    app:cardElevation="8dp"
+    app:cardUseCompatPadding="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/card"
@@ -16,49 +22,52 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <FrameLayout
+        <View
             android:id="@+id/line_left_view"
-            android:layout_width="8dp"
-            android:layout_height="0dp"
+            android:layout_width="0dp"
+            android:layout_height="14dp"
             android:background="@android:color/darker_gray"
-            app:layout_constraintBottom_toTopOf="@+id/under_line_view"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/title_idea"
             style="@style/todoTextColor"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginEnd="10dp"
-            android:fontFamily="@font/m_light"
+            android:layout_margin="15dp"
             android:text="Meeting with Jarry"
-            android:textSize="18sp"
-            app:layout_constraintEnd_toStartOf="@+id/image_title"
+            android:textAlignment="center"
+            app:layout_constraintBottom_toTopOf="@id/image_title"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <View
+            android:id="@+id/title_line"
+            android:layout_width="0dp"
+            android:layout_height="2dp"
+            android:layout_marginTop="4dp"
+            android:background="?attr/toolbarColor"
+            app:layout_constraintEnd_toEndOf="@+id/title_idea"
+            app:layout_constraintStart_toStartOf="@id/title_idea"
+            app:layout_constraintTop_toBottomOf="@id/title_idea" />
 
         <com.lawlett.planner.utils.RoundRectCornerImageView
             android:id="@+id/image_title"
             android:layout_width="140dp"
             android:layout_height="140dp"
             android:layout_margin="15dp"
-            android:scaleType="centerCrop"
             android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
             android:src="@drawable/ic_choose_image"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/line_left_view"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/title_line" />
 
-        <View
-            android:id="@+id/under_line_view"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@android:color/darker_gray"
-            app:layout_constraintBottom_toBottomOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.cardview.widget.CardView
@@ -110,4 +119,4 @@
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
