--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,9 +5,9 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
+            android:id="@+id/nav_main"
             android:icon="@drawable/ic_home"
-            android:title="@string/home_menu" />
+            android:title="@string/main" />
         <item
             android:id="@+id/nav_finance"
             android:icon="@drawable/ic_check"
