--- a/app/src/main/res/layout/create_category_bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/create_category_bottom_sheet_dialog.xml
@@ -12,7 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
         <androidx.cardview.widget.CardView
             android:id="@+id/title_card"
             android:layout_width="match_parent"
@@ -32,16 +31,6 @@
                 android:textSize="20sp" />
         </androidx.cardview.widget.CardView>
 
-        <View
-            android:id="@+id/title_line"
-            android:layout_width="0dp"
-            android:layout_height="2dp"
-            android:layout_marginTop="4dp"
-            android:background="?attr/toolbarColor"
-            app:layout_constraintEnd_toEndOf="@+id/title_card"
-            app:layout_constraintStart_toStartOf="@id/title_card"
-            app:layout_constraintTop_toBottomOf="@id/title_card" />
-
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/title_wrapper"
             android:layout_width="0dp"
@@ -60,7 +49,7 @@
             app:hintTextColor="?attr/toolbarColor"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/title_line">
+            app:layout_constraintTop_toBottomOf="@id/title_card">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/title_editText"
@@ -86,6 +75,21 @@
             app:backgroundTint="?attr/toolbarColor"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/title_wrapper" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/apply_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_marginVertical="10dp"
+            android:elevation="8dp"
+            android:text="@string/apply"
+            android:textAllCaps="false"
+            android:textSize="16sp"
+            app:backgroundTint="?attr/toolbarColor"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/icon_button" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
